--- a/clientSide/src/app/authentification/login/login.component.html
+++ b/clientSide/src/app/authentification/login/login.component.html
@@ -17,7 +17,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <head>
         <meta charset="utf-8"/>
 
-        <title>Metronic | Login Page 6</title>
+        <title>CVEditor | Login </title>
         <meta name="description" content="Login page example">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -34,7 +34,6 @@ License: You must have a valid license purchased only from themeforest(the above
         <!--begin::Layout Skins(used by all pages) -->
                 <!--end::Layout Skins -->
 
-        <link rel="shortcut icon" href="/src/assets/assets/media/logos/favicon.ico" />
 
         <!-- Hotjar Tracking Code for keenthemes.com -->
 <script>
@@ -58,7 +57,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <!-- end::Head -->
 
     <!-- begin::Body -->
-    <body  style="background-image: url(assets/media/demos/demo8/bg-1.jpg)"  class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--transparent kt-page--loading"  >
+    <body  style="background-image: url(assets/media/bg/proxym.png)"  class="kt-quick-panel--right kt-demo-panel--right kt-offcanvas-panel--right kt-header--fixed kt-header-mobile--fixed kt-subheader--enabled kt-subheader--transparent kt-page--loading"  >
 
        
     	<!-- begin:: Page -->
@@ -71,13 +70,13 @@ License: You must have a valid license purchased only from themeforest(the above
                     <div class="kt-login__body">
                         <div class="kt-login__logo">
                             <a href="#">
-                                <img src="assets/media/company-logos/logo-2.png">
+                                <img src="assets/media/bg/login-logo.png" width="200px">
                             </a>
                         </div>
 
                         <div class="kt-login__signin">
                             <div class="kt-login__head">
-                                <h3 class="kt-login__title">Sign In To Admin</h3>
+                                <h3 class="kt-login__title"></h3>
                             </div>
                             <div class="kt-login__form">
 
@@ -167,10 +166,9 @@ License: You must have a valid license purchased only from themeforest(the above
         <div class="kt-grid__item kt-grid__item--fluid kt-grid__item--center kt-grid kt-grid--ver kt-login__content" style="background-image: url(assets/media/bg/bg-4.jpg);">
             <div class="kt-login__section">
                 <div class="kt-login__block">
-                    <h3 class="kt-login__title">Join Our Community</h3>
+                    <h3 class="kt-login__title">Sign In To CVEditor</h3>
                     <div class="kt-login__desc">
-                        Lorem ipsum dolor sit amet, coectetuer adipiscing
-                        <br>elit sed diam nonummy et nibh euismod
+                       
                     </div>
                 </div>
             </div>
