--- a/clientSide/src/app/shared/home/header/header.component.html
+++ b/clientSide/src/app/shared/home/header/header.component.html
@@ -36,7 +36,7 @@
             <div class="kt-header__topbar-item kt-header__topbar-item--user">
                 <div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="0px,10px">
                     <span class="kt-header__topbar-welcome kt-visible-desktop">Hi,</span>
-                    <span class="kt-header__topbar-username kt-visible-desktop">{{listPerson.firstName}}</span>
+                   <!-- <span class="kt-header__topbar-username kt-visible-desktop">{{listPerson.firstName}}</span> -->
                     <img alt="Pic"  [src]="listPerson.image" />
                     <span class="kt-header__topbar-icon kt-bg-brand kt-font-lg kt-font-bold kt-font-light kt-hidden">S</span>
                     <span class="kt-header__topbar-icon kt-hidden"><i class="flaticon2-user-outline-symbol"></i></span>
@@ -46,13 +46,13 @@
                     <!--begin: Head -->
                     <div class="kt-user-card kt-user-card--skin-light kt-notification-item-padding-x">
                         <div class="kt-user-card__avatar">
-                            <img class="kt-hidden-" alt="Pic" [src]="listPerson.image" />
+                           <!-- <img class="kt-hidden-" alt="Pic" [src]="listPerson.image" />-->
 
                             <!--use below badge element instead the user avatar to display username's first letter(remove kt-hidden class to display it) -->
                             <span class="kt-badge kt-badge--username kt-badge--unified-success kt-badge--lg kt-badge--rounded kt-badge--bold kt-hidden">S</span>
                         </div>
                         <div class="kt-user-card__name">
-                            {{listPerson.firstName }} {{listPerson.lastName}}
+                          <!-- {{listPerson.firstName }} {{listPerson.lastName}}-->
                         </div>
                         
                     </div>
