--- a/clientSide/src/app/versions-cv/versions-list.component.html
+++ b/clientSide/src/app/versions-cv/versions-list.component.html
@@ -76,8 +76,9 @@
 
   <!--begin::  add folder Modal-->
   <div class="modal fade" id="Folder_Model" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg" role="document">
-        <div class="modal-content">
+    <div class="modal-dialog modal-lg" role="document" style="max-width: 100%;
+    min-width: fit-content;">
+        <div class="modal-content" style="width: fit-content;">
           
             <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Add new folder</h5>
